# game

./: .gitignore  CMakeLists.txt  ball.c  ball.cpp  ball.h  bounds.cpp  bounds.h  callbacks.c  callbacks.h  draw.c  draw.h  drawable.h  game.sln  game.vcxproj  init.c  init.h  main.c  main.cpp  makefile  notes.txt  object.cpp  object.h  platform.cpp  platform.h  player.cpp  player.h  simulate.c  simulate.h  sleep.h  state.c  state.cpp  state.h
.kdev4/: game.kdev4
data/: axis.fragment  cube.ply  grid.ppm  gun1.ply  plane.ply  simple.fragment  simple.vertex  sphere.ply  test_world.ply  testing.fragment  testing.vertex  wall.ppm
src/: aabb.cpp  aabb.h  config.cpp  config.h  defines.h  drawable.cpp  drawable.h  events.cpp  events.h  input_state.cpp  input_state.h  main.cpp  mesh.h  player.cpp  player.h  shaders.cpp  shaders.h  texture.cpp  texture.h  wall.h  weapons.cpp  weapons.h  window.cpp  window.h
src/base/: drawable.cpp  drawable.h  mesh.cpp  mesh.h  object.cpp  object.h  shaders.cpp  shaders.h  texture.cpp  texture.h  window.cpp  window.h
src/testing/: main.cpp
